# solvespace-gtk

./: .gitignore  Makefile.am  Makefile.msvc  bsp.cpp  cachestring.cpp  cachestring.h  compat.h  configure.ac  confscreen.cpp  describescreen.cpp  draw.cpp  dsc.h  entity.cpp  export.cpp  exportstep.cpp  expr.h  file.cpp  glhelper.cpp  graphicswin.cpp  group.cpp  inttypes.h  mesh.cpp  mouse.cpp  nihstring.cpp  nihstring.h  png2c.pl  polygon.cpp  polygon.h  request.cpp  sketch.h  solvespace.cpp  solvespace.h  style.cpp  system.cpp  textscreens.cpp  textwin.cpp  toolbar.cpp  ttf.cpp  ui.h  undoredo.cpp  (+1 more)
gtk/: aux_ui.cpp  aux_ui.h  config.cpp  fcutil.cpp  fcutil.h  float_window_ui.cpp  float_window_ui.h  main.cpp  menu_item_ui.cpp  menu_item_ui.h  popup_menu_ui.cpp  popup_menu_ui.h  ui.cpp  ui.h  unixutil.cpp
srf/: boolean.cpp  curve.cpp  ratpoly.cpp  surface.cpp  surface.h
tools/: Makefile.am  ttf2c.cpp
win32/: freeze.cpp  freeze.h  w32main.cpp  w32util.cpp
