ACLOCAL_AMFLAGS = -I m4

SUBDIRS = tools 
bin_PROGRAMS = solverspace
solverspace_SOURCES = bsp.cpp clipboard.cpp confscreen.cpp constraint.cpp constrainteq.cpp \
	describescreen.cpp drawconstraint.cpp draw.cpp drawentity.cpp entity.cpp export.cpp \
	exportstep.cpp exportvector.cpp expr.cpp file.cpp generate.cpp glhelper.cpp graphicswin.cpp \
	group.cpp groupmesh.cpp mesh.cpp modify.cpp mouse.cpp polygon.cpp request.cpp solvespace.cpp \
	style.cpp system.cpp textscreens.cpp textwin.cpp toolbar.cpp ttf.cpp undoredo.cpp util.cpp view.cpp 

AM_CXXFLAGS = -Wall -Wextra -Wno-unused-parameter
